# libnpengine-old

./: .gitmodules  CMakeLists.txt  README.md
include/: nsbinterpreter.hpp  text.hpp
src/: nsbinterpreter.cpp  playable.cpp  text.cpp
